minhas_policiesss/kube-system/floodgate-egress-metrics-server-to-search-indexer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-egress-metrics-server-to-search-indexer
  namespace: kube-system
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow-egress
    source-workload: metrics-server
    source-namespace: kube-system
    target-service: search-indexer
    target-port: '8080'
spec:
  podSelector:
    matchLabels:
      k8s-app: metrics-server
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: search
          podSelector:
            matchLabels:
              app: search-indexer
      ports:
        - port: 8080
          protocol: TCP
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
