minhas_policiesss/kube-system/floodgate-intra-egress-kube-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-intra-egress-kube-system
  namespace: kube-system
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow-intranamespace
    source-workload: ''
    source-namespace: kube-system
    target-service: ''
    target-port: '0'
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
