minhas_policiesss/kube-system/floodgate-intra-ingress-kube-system.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-intra-ingress-kube-system
  namespace: kube-system
  labels:
    managed-by: floodgate
    floodgate-policy-type: allow-intranamespace
    source-workload: ''
    source-namespace: kube-system
    target-service: ''
    target-port: '0'
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
