minhas_policiesss/kube-system/floodgate-restrict-egress-metrics-server.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: floodgate-restrict-egress-metrics-server
  namespace: kube-system
  labels:
    managed-by: floodgate
    floodgate-policy-type: restrict-egress
    target-service: metrics-server
    source-workload: ''
    source-namespace: ''
    target-port: '0'
spec:
  podSelector:
    matchLabels:
      k8s-app: metrics-server
  policyTypes:
    - Egress
  egress: []
